[package]
name = "nobrain"
version = "0.1.0"
authors = ["lud <ludovic@demblans.com>"]
edition = "2018"

license = "MIT"
description = "A password generator and storage-less manager"
readme = "README.md"
homepage = "https://github.com/lud/nobrain"
repository = "https://github.com/lud/nobrain"
keywords = ["cli", "password", "tool"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
dialoguer = "0.6.2"
data-encoding = "2.2.0"
data-encoding-macro = "0.1.8"
regex = "1"
lazy_static = "1.4.0"
pbkdf2 = "0.3.0"
sha2 = "0.8.1"
hmac = "0.7.1"
dirs = "2.0.2"